--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    /*background-image: url(images/background.png);*/
+    background-image: url(images/background1.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -356,7 +357,8 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        /*background-image: url(images/phone-background.png);*/
+        background-image: url(images/background1_mobile.jpg);
     }
     .header-text{
         margin-top: 100%;
